# saya_v1

Sayabot-HDFC/: cash_deposit.htm  cash_wdl.htm  choice.htm  demat.htm  error.htm  fixed_deposit.htm  foreignexchange.htm  index.htm  index.htm~  low-battery.htm  other.htm  rating.htm  reached.htm  thanks.htm
Sayabot-HDFC/assets/css/: style.css
Sayabot-HDFC/assets/js/: script.js~
pocketsphinx/demo/: 3191.launch  3191.lm  4212.dic  4212.launch  4212.lm
pocketsphinx/demo/TAR3191/: 3191.dic  3191.log_pronounce  3191.sent  3191.vocab
pocketsphinx/nodes/: speech_comparison.py
saya_hospitality_communication/saya_hospitality_audio/: CMakeLists.txt  package.xml  package.xml~
saya_hospitality_communication/saya_hospitality_audio/launch/: audio.launch
saya_hospitality_communication/saya_hospitality_audio/scripts/: speech1.py  speech1.py~  speech2.py  speech2.py~  speech21.py  speech21.py~  speech22.py  speech22.py~  speech23.py  speech23.py~  speech24.py  speech24.py~  speech25.py  speech25.py~  speech26.py  speech26.py~  speech3.py  speech3.py~  speech4.py  (+8 more)
saya_hospitality_communication/saya_hospitality_communication/: CMakeLists.txt  package.xml  package.xml~
saya_hospitality_communication/saya_hospitality_voice/: CMakeLists.txt  package.xml  package.xml~  setup.py
saya_hospitality_manipulation/eva_arm_controller/: CMakeLists.txt  README.md  package.xml  package.xml~
saya_hospitality_manipulation/saya_hospitality_manipulation/: CMakeLists.txt  package.xml  package.xml~
saya_hospitality_navigation/hdf_dynamixel_isolated/: CMakeLists.txt  package.xml
saya_hospitality_navigation/hdf_gazebo/: CMakeLists.txt  package.xml
saya_hospitality_navigation/laser_filters/: CMakeLists.txt  laser_filters_plugins.xml
saya_hospitality_navigation/saya_hospitality_navigation/: package.xml
saya_hospitality_perception/saya_hospitality_face_tracking/: .gitignore  CMakeLists.txt  README.md  package.xml  rosdoc.yaml
saya_hospitality_perception/saya_hospitality_perception/: CMakeLists.txt  package.xml
saya_hospitality_perception/saya_hospitality_perception_msgs/: CMakeLists.txt  package.xml
saya_hospitality_scenarios/saya_hospitality_scenarios/: CMakeLists.txt  package.xml
saya_hospitality_scenarios/saya_hospitality_states/: .gitignore  CMakeLists.txt  Instruction.docx  README.md  README.md~  package.xml  package.xml~
saya_hospitality_scenarios/saya_hospitality_states/launch/: ira.launch  sayabot.launch  sayabot.launch~  sayabot_bring_up.launch  sayabot_test_states.launch  shutdown.launch  video.launch
saya_hospitality_scenarios/saya_hospitality_states/scripts/: roba.py  roba.py~  saya.py~  shutdown.py  shutdown.py~  video.py~
saya_hospitality_scenarios/saya_hospitality_states/src/states/: battery.py  face_detection_state.py  manipulation1.py  manipulation2.py  manipulation3.py  manipulation3.py~  manipulation4.py  manipulation4.py~  manipulation5.py  manipulation5.py~  manipulation6.py  manipulation6.py~  manipulation7.py  manipulation7.py~  map1.py  map1.py~  map2.py  map2.py~  map3.py  nav1.py~  nav2.py  nav2.py~  nav3.py  nav3.py~  shut_down.py  shut_down.py~  speech_state1.py  speech_state2.py  speech_state3.py  speech_state3.py~  speech_state4.py  speech_state5.py  speech_state6.py  speech_state7.py  speech_state8.py  speech_state8.py~  speech_state9.py  speech_state9.py~  ui1.py  ui2.py  (+5 more)
(+96 files in other folders)
